--- a/normalize.css
+++ b/normalize.css
@@ -9,8 +9,7 @@
  */
 
 html {
-  
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -24,23 +23,23 @@ a {
   color: white;
   text-decoration: none;
 }
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    color:rgba(0, 119, 101, 1) ;
-  }
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+  color: rgba(0, 119, 101, 1);
+}
 h3 {
   font-size: 18px;
   font-style: italic;
-  font-weight: lighter ;
+  font-weight: lighter;
 }
 .column.top {
-  
   margin-top: 20px;
 }
 .column {
-  font-size: 32px;
-  margin-top: 20px ;
+   /* font-size: 32px;  */
+  font-size: 1.9vw;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 .logo {
@@ -52,8 +51,8 @@ h3 {
   margin-bottom: 5px;
   font-weight: 600;
   /* background-color: rgba(0, 0, 0,.2) ; */
- text-align: center;
-  color:rgba(0, 119, 101, 1) ;
+  text-align: center;
+  color: rgba(0, 119, 101, 1);
   font-size: 64px;
 }
 .block-text {
@@ -61,79 +60,79 @@ h3 {
   color: white;
   margin: auto;
 }
-.block-text-second
-{
-width: 893px;
-font-style: italic;
+.block-text-second {
+  /* width: 893px; */
+max-width: 893px;
+  font-style: italic;
   align-items: center;
   justify-content: center;
   text-align: center;
   display: flex;
-  font-size: 48px;
+  font-size: 2.7em;
   color: white;
   margin: auto;
 }
 .block-text-photo-second {
   width: 100%;
-  
+
   height: 483px;
   background-image: url("images/second.png");
   display: flex;
   margin: auto;
 }
-.block-text-photo  {
+.block-text-photo {
   height: 403px;
+  width: 100%;
   background-image: url("images/imageback.png");
   display: flex;
   margin: auto;
   box-sizing: border-box;
 }
 .pageHeader {
-  font-size: 24px ;
+  font-size: 24px;
   font-family: "Roboto" sans-serif;
   position: sticky;
   top: 0px;
   display: flex;
   margin: auto;
-  height:  84px;
-  background-color: rgba(0, 119, 101, 1) ;
+  height: 84px;
+  background-color: rgba(0, 119, 101, 1);
 }
 .headerContainer {
-
   font-weight: bold;
   padding: 0 55px 0 55px;
   margin: auto;
   box-sizing: border-box;
   display: flex;
   width: 1219px;
-  height:45px;
-/* background-color: rgb(19, 35, 48); */
+  height: 45px;
+  /* background-color: rgb(19, 35, 48); */
 }
 .header-image {
   height: 100%;
 }
 .header-list {
-  order:2;
+  /* order: 2; */
   margin-top: auto;
   margin-bottom: auto;
   margin-left: auto;
   list-style: none;
+  box-sizing: border-box;
   /* left: 980px;
   top:31px ;
   position: absolute; */
   color: aliceblue;
   display: flex;
+  flex-wrap:wrap ;
   position: relative;
-  
- 
+  font-size: 1.5vw;
 }
 .placeholder {
   background-color: aqua;
- 
 }
 .listItem {
-  margin-left: 8px ;
-  margin-right: 8px ;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 .main-text-container {
   flex-direction: column;
@@ -143,9 +142,8 @@ font-style: italic;
   box-sizing: border-box;
 }
 .text-container {
- 
-  width: 1219px;
-  padding: 0 55px 55px 55px ;
+  max-width: 1219px;
+  padding: 0 55px 55px 55px;
   /* background-color:  rgba(171, 119, 30, 0.3); */
   display: flex;
   margin: auto;
@@ -153,14 +151,13 @@ font-style: italic;
   flex-direction: column;
 }
 .text-container-team {
-
-width: 1219px;
-padding: 32px 55px 55px 55px ;
-/* background-color:  rgba(171, 119, 30, 0.3); */
-margin: auto;
-box-sizing: border-box;
-flex-direction:row;
-display: flex;
+  max-width: 1219px;
+  padding: 32px 55px 55px 55px;
+  /* background-color:  rgba(171, 119, 30, 0.3); */
+  margin: auto;
+  box-sizing: border-box;
+  flex-direction: row;
+  display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
@@ -180,21 +177,21 @@ display: flex;
 /**
  * Remove the margin in all browsers.
  */
- footer {
-   background-color: rgba(51, 51, 51, 1) ;
-   width: 100%;
-   display: flex;
-   margin: auto;
- }
+footer {
+  background-color: rgba(51, 51, 51, 1);
+  width: 100%;
+  display: flex;
+  margin: auto;
+}
 
-.trademark{
-color: white;
+.trademark {
+  color: white;
   width: 540px;
   display: flex;
   margin: 48px auto 48px auto;
-justify-content: center;
-text-align: center;
-font-size:18px ;
+  justify-content: center;
+  text-align: center;
+  font-size: 18px;
 }
 /**
  * Render the `main` element consistently in IE.
@@ -346,7 +343,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -356,7 +354,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
